# ladder-backend

./: .gitignore  .stylish-haskell.yaml  .travis.yml  LICENSE  README.md  ladder.cabal  rambler.json.example  stack.yaml
app/: Config.hs  Main.hs  Server.hs
app/Server/: Match.hs  Matchup.hs  Player.hs  Token.hs  Venue.hs
migrations/: 2018-12-23T16:51:25_dbinit.sql  2018-12-25T20:45:37_move-venue-to-matchups.sql  2018-12-25T20:51:09_move-date-to-matchups.sql  2018-12-27T01:37:48_add-validation-to-matches.sql  2018-12-27T03:27:28_cascade-matchup-deletions.sql  2019-01-01T17:53:58_create-proposed-matches.sql  2019-01-04T18:37:20_add-client-info-table.sql  2019-01-20T23:43:19_make-outcomes-optional-on-matches.sql  2019-02-16T21:09:42_add-is_active-to-venues.sql
scripts/: dbinit  newmigration  test
src/: Error.hs  Rating.hs
src/Data/: Match.hs  Matchup.hs  Player.hs  Rating.hs  Season.hs  Time.hs  Venue.hs
src/Data/Ladder/: ClientInfo.hs  Match.hs  Matchup.hs  Player.hs  ProposedMatch.hs  Rating.hs  Season.hs  Time.hs  Venue.hs
src/Database/: Ladder.hs
src/Database/Ladder/: ClientInfo.hs  Match.hs  Matchup.hs  Player.hs  ProposedMatch.hs  Rating.hs  Season.hs  Venue.hs
test/: Config.hs  Spec.hs
