name:                ladder
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/ladder#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Ladder.Match
                     , Data.Ladder.Matchup
                     , Data.Ladder.Player
                     , Data.Ladder.Season
                     , Data.Ladder.Time
                     , Data.Ladder.Venue
                     , Database.Ladder
                     , Database.Ladder.Matchup
                     , Database.Ladder.Player
                     , Database.Ladder.Season
                     , Database.Ladder.Venue
                     , Error
                     , Rating
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring >= 0.10.8.2 && < 0.11
                     , servant-server
                     , postgresql-simple >= 0.5.4.0 && < 0.6
                     , statistics >= 0.14.0.2 && < 0.15
                     , time >= 1.8.0.2 && < 1.9
                     , uuid >= 1.3.13 && < 1.4
                     , wai
                     , warp
  default-language:    Haskell2010
  default-extensions:  DeriveGeneric
                     , OverloadedStrings
                     , QuasiQuotes

executable ladder-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ladder
  default-language:    Haskell2010

test-suite ladder-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ladder
                     , hspec
                     , HUnit
                     , bytestring >= 0.10.8.2 && < 0.11
                     , postgresql-simple >= 0.5.4.0 && < 0.6
                     , time >= 1.8.0.2 && < 1.9
                     , uuid >= 1.3.13 && < 1.4
  other-modules:       Config
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , QuasiQuotes

source-repository head
  type:     git
  location: https://github.com/jisantuc/ladder-backend
